Remove too fresh features